Mocked date so tests pass and extracted class

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,13 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/DateToday.js"></script>
   <script src="src/Statement.js"></script>
+  
 
   <!-- include spec files here... -->
   <script src="spec/StatementSpec.js"></script>
-
+  
 </head>
 
 <body>
